log
Sun, May 18, 2025  1:59:44 AM: 
 tests:  0|5
total_score: 0/70
3f0e54c
Sun, May 18, 2025  2:05:43 AM: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:55:15: error: unused variable 'l' [-Werror=unused-variable]
     int i,j,k,l;
               ^
cc1.exe: all warnings being treated as errors
1c4f23a
Sun, May 18, 2025  2:06:54 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
ca6b3b5
Sun, May 18, 2025  2:15:59 AM: 
 sudoku.c | 35 +++++++++++++++++++++--------------
 1 file changed, 21 insertions(+), 14 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:54:9: error: unused variable 'box' [-Werror=unused-variable]
     int box[3][3][10] = {0}; // submatrices de 3x3
         ^~~
sudoku.c:53:9: error: unused variable 'col' [-Werror=unused-variable]
     int col[9][10] = {0}; // columnas
         ^~~
sudoku.c:52:9: error: unused variable 'row' [-Werror=unused-variable]
     int row[9][10] = {0}; // filas
         ^~~
sudoku.c:51:13: error: unused variable 'k' [-Werror=unused-variable]
     int i,j,k;
             ^
sudoku.c:51:11: error: unused variable 'j' [-Werror=unused-variable]
     int i,j,k;
           ^
sudoku.c:51:9: error: unused variable 'i' [-Werror=unused-variable]
     int i,j,k;
         ^
cc1.exe: all warnings being treated as errors
9691a89
Sun, May 18, 2025  2:18:37 AM: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:54:9: error: unused variable 'box' [-Werror=unused-variable]
     int box[3][3][10] = {0}; // submatrices de 3x3
         ^~~
sudoku.c:53:9: error: unused variable 'col' [-Werror=unused-variable]
     int col[9][10] = {0}; // columnas
         ^~~
sudoku.c:52:9: error: unused variable 'row' [-Werror=unused-variable]
     int row[9][10] = {0}; // filas
         ^~~
sudoku.c:51:13: error: variable 'k' set but not used [-Werror=unused-but-set-variable]
     int i,j,k;
             ^
cc1.exe: all warnings being treated as errors
19a7aae
Sun, May 18, 2025  2:19:38 AM: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|4
total_score: 15/70
43b14bb
Sun, May 18, 2025  2:20:24 AM: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
Compilation failed
test.c: In function 'is_valid':
test.c:245:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
 }
 ^
test.c:262:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:245:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:7:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
9550986
Sun, May 18, 2025  2:20:46 AM: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
Compilation failed
test.c: In function 'is_valid':
test.c:245:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
 }
 ^
test.c:262:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:245:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:7:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
e4adc4e
